First big update
many things,

--- a/colours/functions 2.html
+++ b/colours/functions 2.html
@@ -29,11 +29,12 @@
         <p>They're doing two things:</p>
         <p>1. They're providing key changes (our focus today)</p>
         <p>2. They're providing secondary dominants (which we'll cover in one of the advanced colour pages)</p>
+        <div class="space-large"></div>
         <h3>If chords of the same colour have the same function,</h3>
         <p>and all purples are dominant and all greens are subdominant,</p>
         <p>Then it follows that all oranges are tonics</p>
-        <h2>Before we experience this,</h2>
-        <p>We need to get comfortable seeing all our major and minor chords layed out like this:</p>
+        <h2>But before we experience this,</h2>
+        <p>We need to get more familiar with this hypercube layout:</p>
         <img src="../images/keygrid.png" class="standard-image" alt="Colour Wheel">
         <p>This is a flattened out hypercube which we will understand in the geometry section of the website</p>
         <p>But we dont need to understand the hypercube to grasp and use this chart</p>
@@ -43,15 +44,20 @@
         <p>But they're also organised into 4 blocks</p>
         <p>Each block represents a key</p>
         <p>This block here has the 6 major and minor chords of C major in it, this block is the key of C major:</p>
+        <p>(2nd from the right in the chart above)</p>
         <img src="../images/cwithfunctions.gif" class="standard-image" alt="Colour Wheel">
         <p>Looking back to the full chart we can see 4 keys for each of the orange chords</p>
         <h3>We have the key of C, Eb, Gb and A</h3>
         <img src="../images/gridwithfunctions.png" class="standard-image" alt="Colour Wheel">
         <p>Notice how the layout of the chords is the same, the V is always above the I for example</p>
+        <div class="space-large"></div>
+        <p>Essentially we have:</p>
+        <h3><i>4 keys related by minor 3rds</i></h3>
+        <div class="space-large"></div>
         <p>These 4 keys share a deep relationship, they share their harmony</p>
         <h1>Ok, how?</h1>
         <p>Firstly they share all of their dominants</p>
-        <p>Remember how C major has the regular dominant (G), the tritone sub (Db), the backdoor dominant (Bb) and the dominant of minor (E)</p>
+        <p>Remember from the last page how C major has the regular dominant (G), the tritone sub (Db), the backdoor dominant (Bb) and the dominant of minor (E)</p>
         <p>Notice below how all 4 orange keys share these dominants</p>
         <img src="../images/shareddoms.gif" class="standard-image" alt="Colour Wheel">
         <h2>Focus on Gmaj</h2>
@@ -60,6 +66,7 @@
         <p>- The backdoor dominant of A major</p>
         <p>- The tritone sub of Gb major</p>
         <p>- The dominant of the minor of Eb major</p>
+        <div class="space-large"></div>
         <h1>Just this alone gives us access to a huge world of key change possibilities</h1>
         <p>Let's start in the key of C, do a backdoor 251 but resolve the Bb as a tritone sub into the key of A major</p>
         <img src="../images/CtoA.png" class="standard-image" alt="Colour Wheel">
@@ -70,16 +77,21 @@
             </audio>
         </div>
         <p>How cool is that?</p>
+        <div class="space-large"></div>
         <p>This harmonic sharing is also applied to the subdominants</p>
+        <div class="space-large"></div>
         <h2>This results in an interconnected network of orange keys</h2>
         <p>A landscape of keys that share their harmony through colour</p>
+        <div class="space-large"></div>
         <p>I'm interested in navigating through this landscape in a sensitive and musical way</p>
-        <p>We'll explore this more in the cook book</p>
+        <p>Which is the goal of the Cook Book</p>
+        <div class="space-large"></div>
         <h1>So,</h1>
         <p>in the orange hypercube:</p>
         <p>- All purples are dominant</p>
         <p>- All greens are subdominant</p>
-        <p>- All oranges are tonics</p>
+        <p>- All oranges are tonics (key changes)</p>
+        <div class="space-large"></div>
         <h3>But what if I want to play a song thats in a green key?</h3>
         <p>What if we're playing a song in the key of Ab?</p>
         <p>We need a green hypercube for all the green keys:</p>
@@ -87,16 +99,28 @@
         <p>And a purple hypercube for all the purple keys:</p>
         <img src="../images/purplehc.gif" class="standard-image" alt="Colour Wheel">
         <p>The 3 hypercubes cover all 12 keys</p>
-        <p>and allow us to do all the beautful key weaving we did in the orange hypercube, but also for green keys and purple keys</p>
+        <p>and we'll dive into this more in the geometry section of the website</p>
+        <p>but this means we can do all the beautful key weaving we did in the orange hypercube</p>
+        <p>but also for green keys and purple keys</p>
         <img src="../images/ingreen.png" class="standard-image" alt="Colour Wheel">
         <p>Above is the progression we did in C major (previous audio clip) but in the green hypercube in the key of D</p>
-        <p>Ok so now we can play in any key by using the 3 hypercubes</p>
+        <div class="space-large"></div>
+        <p>Now we can play in any key by using the 3 hypercubes</p>
+        <p><i>"Which of the 12 keys are we in?</i></p>
+        <p><i>We're either in the orange, green or purple hypercube"</i></p>
+        <img src="../images/hypercubeboxes.png" class="standard-image" alt="Colour Wheel">
+        <p>Think of it like 3 containers, each holding 4 keys</p>
+        <div class="space-large"></div>
         <p>We can also change between keys of the same colour by staying in one hypercube (as above)</p>
+        <p><i>"Let's change from the key of E to the key of Bb</i></p>
+        <p><i>We'll be moving in the purple hypercube"</i></p>
+        <div class="space-large"></div>
         <h2>But one question remains:</h2>
         <p>How do we modulate from one hypercube to another?</p>
         <p>What if we want to go from a green key into a purple key?</p>
         <p>We'll cover this in an advanced colour page and also in the geometry pages</p>
         <p>and of course in the cook book</p>
+        <div class="space-large"></div>
         <p>But for now we've covered the essentials of the colour system:</p>
         <p>- Orange keys Share their dominants and subdominants</p>
         <p>- Green keys Share their dominants and subdominants</p>
@@ -109,6 +133,6 @@
         <div class="space-large"></div>
             <a href="functions.html"class="nav-style">Back to Functions 1</a> |
             <a href="complimentary.html"class="nav-style">Continue to Complimentary Colours</a>
-            <div class="space-medium"></div>
+            <div class="space-large"></div>
         </body>
  </html>
