--- a/colours/primaries.html
+++ b/colours/primaries.html
@@ -17,11 +17,14 @@
         <p><b><i><u>COLOURS:</u></i></b></p>
         <h1><I>PRIMARY COLOURS</I></h1>
         <div class="space-medium"></div>
-        <p>Primary colours = Notes</P>
+        <p>Primary colours = Notes related by minor 3rds</P>
+        <p>This is the foundation for all of metaharmony</p>
+        <div class="space-medium"></div>
         <p>Learning outcome: <i>Notes are either yellow, Red or Blue</i></p>
             <p>We start by taking the 12 notes of the piano and splitting them into three groups</p>
             <p>starting on C we ascend in semitones cycling: yellow, red, blue, yellow, red, blue...</p>
             <img src="../images/start.png" class="standard-image" alt="Colour Wheel"><br>
+            <div class="space-large"></div>
             <p>Each colour group is a Diminshed 7th chord (º7th) which is simply a stack of minor 3rd intervals</p>
             <p>in other words, each yellow note is 3 semitones away from the next.</p>
             <img src="../images/yellow.png" class="standard-image" alt="Colour Wheel"><br>
@@ -31,8 +34,10 @@
                     <source src="../audio/Cdim.mp3" type="audio/mpeg">
                 </audio>
             </div>
+            <div class="space-large"></div>
             <p>Here's the shape we played on guitar</p>
-            <img src="../images/Cdimgtr.png" class="standard-image" alt="Colour Wheel"><br>
+            <img src="../images/cdimgtr.png" class="standard-image" alt="Colour Wheel"><br>
+            <div class="space-large"></div>
             <p>explore this with the blue and red notes.</p>
             <img src="../images/primaries.gif" class="standard-image" alt="Colour Wheel"><br>
             <div class="audio-player-container">
@@ -43,6 +48,7 @@
             </div>
             <p>Here's the tab of what we just played on guitar</p>
             <img src="../images/dimsgtr.gif" class="small-image" alt="Colour Wheel"><br>
+            <div class="space-large"></div>
             <p>I think it's really helpful to visualise this on the circle of 5ths (try to focus on one gif at a time...)</p>
             <img src="../images/cofths.gif" class="standard-image" alt="Colour Wheel"><br>
             <p>You can see the symmetrical square nature of the 4 notes of each colour</p>
@@ -53,6 +59,6 @@
             <div class="space-large"></div>
             <a href="colours.html"class="nav-style">Back to Colour Home</a> |
             <a href="secondaries.html"class="nav-style">Continue to Secondary Colours</a>
-            <div class="space-medium"></div>
+            <div class="space-large"></div>
         </body>
  </html>
