--- a/colours/secondaries.html
+++ b/colours/secondaries.html
@@ -24,8 +24,10 @@
         <img src="../images/cmaj.png" class="standard-image" alt="Colour Wheel"><br>
         <p>We think of this entire chord as orange, because its notes are a mixture of yellow and red</p>
         <img src="../images/cmajo.png" class="standard-image" alt="Colour Wheel"><br>
+        <div class="space-large"></div>
         <p>C minor is also orange</p>
         <img src="../images/cmin.png" class="standard-image" alt="Colour Wheel"><br>
+        <div class="space-large"></div>
         <h3>At the heart of secondary colours is the perfect 5th interval</h3>
         <p>the foundation of tonal harmony and harmonic stability </p>
         <img src="../images/pwrchrdo.png" class="standard-image" alt="Colour Wheel"><br>
@@ -35,16 +37,13 @@
                 <source src="../audio/pwrchrd.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>Ok,</p>
         <p>All major and minor chords built on <b>yellow root notes</b> are orange</p>
         <p>Heres a Gb minor triad with the 5th in the bass, it's orange.</p>
         <img src="../images/gbmin.png" class="standard-image" alt="Colour Wheel"><br>
         <h3>This results In a family of major and minor chords related by minor 3rds</h3>
-        <img src="../images/ofam.png" alt="Colour Wheel"><br>
-        <p>Here are the purples:</p>
-        <img src="../images/purps.png" alt="Colour Wheel"><br>
-        <p>And here are the greens:</p>
-        <img src="../images/grns.png" alt="Colour Wheel"><br>
+        
         <p>Seeing this on guitar really helps, play a barre chord and move it 3 frets at a time to traverse the respective colour family</p>
         <img src="../images/greens.gif" class="small-image" alt="Colour Wheel"><br><br>
         <div class="audio-player-container">
@@ -53,6 +52,7 @@
                 <source src="../audio/greens.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>So, if we ascend major or minor triads in semitones we get orange, purple, green, orange, purple, green etc:</p>
         <img src="../images/opg.gif" class="small-image" alt="Colour Wheel"><br>
         <div class="audio-player-container">
@@ -62,10 +62,16 @@
             </audio>
         </div>
         <div class="space-large"></div>
+        <p>We want to get used to seeing all major and minor chords like this:</p>
+        <img src="../images/all24.png" class="standard-image" alt="Colour Wheel"><br>
+        <p>We'll understand why in the next section</p>
+        <p>But as for this section,</p>
         <p>Do you feel comfortable that major and minor chords related by minor 3rds have the same colour?</p>
         <h1>Then Congratulations!</h1>
+        <div class="space-medium"></div>
         <p>You've completed level one of metaharmony:</p>
         <p><i>"Primary and secondary colours represent notes and chords related by minor 3rds"</i></p>
+        <div class="space-medium"></div>
         <img src="../images/cw.png" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
         <p>You now understand the 6 colours of the metaharmony colour wheel</p>
@@ -73,6 +79,6 @@
         <div class="space-large"></div>
         <a href="primaries.html"class="nav-style">Back to Primaries</a>  | 
         <a href="functions.html"class="nav-style">Continue to Harmonic Functions</a>
-            <div class="space-medium"></div>
+        <div class="space-large"></div>
         </body>
  </html>
