--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,6 @@
     <div class="large"><i>LET'S CONNECT</i></div>
     <div class="space-large"></div>
     <a href="https://www.instagram.com/metaharmony_" target="_blank" class="nav-style">Metaharmony Instagram</a>
+    <div class="space-large"></div>
   </body>
 </html>
