--- a/cookbook/Exploringdominants/Exploringdominants.html
+++ b/cookbook/Exploringdominants/Exploringdominants.html
@@ -17,7 +17,11 @@
     <p><b><i><u>COOK BOOK:</u></i></b></p>
     <h1><i>EXPLORING THE DOMINANTS</i></h1>
     <div class="space-medium"></div>
-    <p>We know form working through the colours pages that every key has 8 dominant chords</p>
+    <p>We know form working through the first harmonic functions page that every key has 8 dominant chords</p>
+    <div class="space-medium"></div>
+    <a href="../../colours/functions.html"class="nav-style">Harmonic Functions Page</a>
+    <div class="space-medium"></div>
+    <p>Let's work in the green hypercube</p>
     <p>The key of F has C major as its regular dominant (chord V)</p>
     <p>And then all the other 7 orange chords are also dominant to F</p>
     <img src="../../imagesCB/domsofF.png" class="standard-image" alt="Colour Wheel">
@@ -30,13 +34,20 @@
     <p>Dominant chords (whether the tritone sub or the backdoor) traditionally have the b7th added</p>
     <p>But in metaharmony they could have a major 7th instead for example</p>
     <h2>An orange with a blue</h2>
+    <a href="../../colours/complimentary.html"class="nav-style">Complementary Colours</a>
+    <div class="space-medium"></div>
     <p>These orange chords are dominant to F major simply because they're orange (scroll up to chart)</p>
     <p>we can add any other notes on top of that if we please, whether the b7 or the ^7 or beyond</p>
     <p>we no longer have certain chord extensions bound to certain functions</p>
     <p>the colours give freedom</p>
-    <h3>Let's hear this in action:</h3>
     <div class="space-large"></div>
+    <h3>Let's hear this in action:</h3>
+    <p>Starting with the major dominants (we'll skip the regular dom, C maj)</p>
+    <img src="../../imagesCB/4majors.png" class="standard-image" alt="Colour Wheel">
+    <div class="space-large"></div>
+    <p>First one,</p>
     <h1>The backdoor dominant</h1>
+    <img src="../../imagesCB/backdoor.png" class="standard-image" alt="Colour Wheel">
     <p>Here's a I-IV-vi-V progression in F</p>
     <p>The second time round we swap the V with the backdoor dominant, Eb^7</p>
     <div class="audio-player-container">
@@ -45,9 +56,15 @@
           <source src="../../audioCB/backdoor.mp3" type="audio/mpeg">
       </audio>
     </div>
-    <p>the ^7 backdoor dominant is so beautiful and Summery</p>
+    <p><i>F^7 Bb^7 Dm7 C</i></p>
+    <p><i>F^7 Bb^7 Dm7 Eb^7</i></p>
+    <div class="space-medium"></div>
+    <p>The ^7 backdoor dominant is so beautiful and Summery</p>
+    <p>This ^7 backdoor dominant could also be seen through the lens of modal mixture</p>
+    <p>Advanced colour page coming soon</p>
     <div class="space-large"></div>
     <h1>The tritone sub</h1>
+    <img src="../../imagesCB/tritone.png" class="standard-image" alt="Colour Wheel">
     <p>I'm sticking with the ^7 vibe for this one</p>
     <p>We've got a vamp between the Tonic and the tritone dominant</p>
     <p>and then a mini B section using some diatonic chords, resolving back via Gb^7</p>
@@ -61,8 +78,10 @@
     <p>As if we're somewhere mysterious and dangerous but beautiful</p>
     <div class="space-large"></div>
     <h1>The dominant of minor</h1>
+    <img src="../../imagesCB/domofmin.png" class="standard-image" alt="Colour Wheel">
     <p>I love this resolution, so underused</p>
     <p>We're just vamping between chord I and the major III</p>
+    <p><i>F^7 Aadd11</i></p>
     <p>We've got A major add 11 which is just so bright and beautiful</p>
     <div class="audio-player-container">
       <div class="audio-title">The Dom of Minor</div>
@@ -73,14 +92,19 @@
     <div class="space-large"></div>
     <div class="large"><i>What about the minor dominants?</i></div>
     <div class="space-large"></div>
+    <img src="../../imagesCB/4minors.png" class="standard-image" alt="Colour Wheel">
+    <div class="space-large"></div>
     <p>I love these!</p>
-    <p>And apart from the minor 5, they're never really used</p>
+    <p>They're not generally thought of as 'dominant'</p>
+    <p>They're very underused (especially the minor backdoor and tritone)</p>
     <p>Let's hear some ideas I came up with using them:</p>
     <div class="space-large"></div>
     <h1>The minor 5</h1>
+    <img src="../../imagesCB/minor5.png" class="standard-image" alt="Colour Wheel">
+    <p>Here we're just playing between chord I, F^7 and the minor v, Cm</p>
     <p>I love the slight darkness this chord has</p>
     <p>It makes the tonic major sound just that little bit more bright and delightful in contrast</p>
-    <p>Below we can hear the movement as chords and also a riff</p>
+    <p>The first recording is just the chords, the next is a riff</p>
     <div class="audio-player-container">
       <div class="audio-title">The minor 5</div>
       <audio controls>
@@ -91,25 +115,28 @@
     <div class="audio-player-container">
       <div class="audio-title">Minor 5 riff</div>
       <audio controls>
-          <source src="../../audioCB/m5.mp3" type="audio/mpeg">
+          <source src="../../audioCB/m5riff.mp3" type="audio/mpeg">
       </audio>
     </div>
-    <p>I made this ruff in 7/8 time signature going between F^7 and Cm11</p>
+    <p>I made this riff in 5/8 time signature going between F^7 and Cm11</p>
     <div class="space-large"></div>
     <h1>Chord iii</h1>
+    <img src="../../imagesCB/iii.png" class="standard-image" alt="Colour Wheel">
     <p>A controversial one!</p>
     <p>Some say that chord iii has tonic function</p>
     <p>But I disagree for two reasons</p>
-    <p>firstly its orange here and orange chords are dominant to the green F major</p>
+    <p>firstly its orange here</p>
+    <p>and the green hypercube says orange chords are dominant to F major</p>
     <p>secondly it has the leading tone of F major in it (E natural)</p>
     <p>Which pulls back up to F</p>
     <p>Let's first hear the cadence of iii resolving to I:</p>
     <div class="audio-player-container">
-      <div class="audio-title">Chord iii</div>
+      <div class="audio-title">iii resolving to I</div>
       <audio controls>
           <source src="../../audioCB/iii.mp3" type="audio/mpeg">
       </audio>
     </div>
+    <p>to my ear, that is undeniably a dominant cadence of some sort</p>
     <br>
     <p>Now let's hear it in a progression:</p>
     <br>
@@ -119,30 +146,38 @@
           <source src="../../audioCB/iiiriff.mp3" type="audio/mpeg">
       </audio>
     </div>
-    <div class="space-large"></div>
+    <p>This progression goes F^7, Am7, F^7, Gm7, Am7, F^7</p>
+    <div class="space-medium"></div>
+    <p>I love using this iii I cadence to change into new keys, stay tuned for some Cook Book on that
+      <div class="space-large"></div>
+    </p>
     <h1>The minor backdoor</h1>
+    <img src="../../imagesCB/minorbackdoor.png" class="standard-image" alt="Colour Wheel">
     <p>love this one</p>
-    <p>Let's first hear it in a progression:</p>
+    <p>Let's first hear it in a progression</p>
+    <p>We're going: F^7, Ebm7, Dm7, Bb^7</p>
     <div class="audio-player-container">
-      <div class="audio-title">Backdoor dominant</div>
+      <div class="audio-title">Minor Backdoor</div>
       <audio controls>
           <source src="../../audioCB/mBDriff.mp3" type="audio/mpeg">
       </audio>
     </div>
     <br>
     <div class="audio-player-container">
-      <div class="audio-title">BD dominant riff</div>
+      <div class="audio-title">Minor BD riff</div>
       <audio controls>
           <source src="../../audioCB/minBD.mp3" type="audio/mpeg">
       </audio>
     </div>
+    <p>This riff goes between chord I, and Ebm9</p>
+    <p>Love how strongly the F^7 feels like tonic</p>
     <div class="space-large"></div>
     <h1>The minor tritone sub</h1>
-    <p>This movement is iconic in the modern jazz world</p>
-    <p>The root and 5th of F^7 go up a semitone</p>
-    <p>and the 3rd and 7th remain in place</p>
-    <p>This results in a minor 7 chord a semitone above the root</p>
+    <img src="../../imagesCB/minortritone.png" class="standard-image" alt="Colour Wheel">
+    <p>This is a beautiful one</p>
     <p>Let's first hear it in a progression:</p>
+    <p>F^7, Gbm7, F^7, Gm7, with a little diatonic B section</p>
+    <p>I love the movement from F^7 up to Gbm7</p>
     <div class="audio-player-container">
       <div class="audio-title">Minor tritone</div>
       <audio controls>
@@ -158,6 +193,21 @@
           <source src="../../audioCB/mTTriff.mp3" type="audio/mpeg">
       </audio>
     </div>
+    <p>In this riff I'm trying to obscure the 'semitone above' feeling of the chord by heavily accenting the 3rd in the bass</p>
+    <p>and then we go to chord IV Bb major and use Gbm7 to get back to F</p>
+    <div class="space-large"></div>
+    <p>I wrote another chord progression again trying obscure the 'semitone above the root' feeling</p>
+    <p>F^7 Bb^7 Gbm7 Gm9</p>
+    <div class="audio-player-container">
+      <div class="audio-title">Minor tritone 2</div>
+      <audio controls>
+          <source src="../../audioCB/minortritonechords.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <p>You could say this is just a chromatic approach of chord ii</p>
+    <p>but I think it really holds its own harmonic space, identity and function in the progression</p>
+    <div class="space-large"></div>
+    <p>TABS/NOTATION COMING SOON</p>
     <div class="space-large"></div>
     <p>So that's me sharing a little exploration of each of the 8 dominants</p>
     <p>Theres still so much more to do with each of them</p>
