--- a/cookbook/Exploringsubdominants/exploringsubdominants.html
+++ b/cookbook/Exploringsubdominants/exploringsubdominants.html
@@ -17,7 +17,11 @@
     <p><b><i><u>COOK BOOK:</u></i></b></p>
     <h1><i>EXPLORING THE SUBDOMINANTS</i></h1>
     <div class="space-medium"></div>
-    <p>We're going to take a set progression and replace one chord with other green chords</p>
+    <p>We know form working through the first harmonic functions page that every key has 8 subdominant chords</p>
+    <div class="space-medium"></div>
+    <a href="../../colours/functions.html"class="nav-style">Harmonic Functions Page</a>
+    <div class="space-medium"></div>
+    <p>We're going to take a set progression and try replacing a subdominant chord with all the others</p>
     <p>We're going to explore all the other subdominants in the key of C</p>
     <p>There are 100's of ways to impliment these subdominant chords in the key of C</p>
     <p>But this excercise demonstrates how they can all work in a restricted context</p>
@@ -37,11 +41,18 @@
   <h2><i>ii - IV - ii - IV</i></h2>
   <h2><i>I - IV - I - I</i></h2>
   <div class="space-large"></div>
-  <p>We're going to use our chart from what we learned over on the COLOURS page</p>
+  <p>We're going to use our chart from the colours pages</p>
   <img src="../../imagesCB/thesubs.png" class="standard-image" alt="Colour Wheel">
-  <div class="space-medium"></div>
-  <p>One at a time, Let's swap the D minor in our progression for each of the other green chords</p>
-  <p>We've already used Fmaj and Dmin so far, that leaves 6 chords to explore</p>
+  <div class="space-large"></div>
+  <p><i>One at a time, Let's swap the D minor in our progression for each of the other green chords</i></p>
+  <p><i>We've already used Fmaj and Dmin, that leaves 6 other green chords to explore:</i></p>
+  <br>
+  <p><i>1. D major</i></p>
+  <p><i>2. B minor</i></p>
+  <p><i>3. B major</i></p>
+  <p><i>4. Ab minor</i></p>
+  <p><i>5. Ab major</i></p>
+  <p><i>6. F minor</i></p>
   <div class="space-large"></div>
   <h1><i>Each choice results in a rough idea which could be further developed into a song</i></h1>
   <div class="space-large"></div>
@@ -129,7 +140,7 @@
 <p>I used the same F^7 voicing but simply dropped the 3rd</p>
 <p>Keeping the E natural on top giving a minor^7 sound</p>
 <div class="space-large"></div>
-<p>TABS/NOTATION ON ALL COMING SOON</p>
+<p>TABS/NOTATION COMING SOON</p>
 <div class="space-large"></div>
     <a href="../InAction.html"class="nav-style">Back to Cook Book</a><br>
     <div class="space-large"></div>
