--- a/cookbook/InAction.html
+++ b/cookbook/InAction.html
@@ -18,6 +18,7 @@
     <div class="space-medium"></div>
     <p>In the way you would open up a cook book to get fresh recipe ideas for your dinner</p>
     <p>The metaharmony cook book is a place to get fresh compositional ideas for your music</p>
+    <p><i>My intention is to present a palette of rough ideas to inspire you</i></p>
     <div class="space-large"></div>
     <h3><i>Start with either of these:</i></h3>
     <div class="space-medium"></div>
@@ -26,5 +27,6 @@
     <a href="Exploringsubdominants/exploringsubdominants.html"class="nav-style">Exploring the Subdominants</a><br><br><br>
     <div class="space-large"></div>
     <h2>More pages coming soon</h2>
+    <div class="space-large"></div>
   </body>
 </html>
