--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 <h2><i>"I think metahamrony really shines for people who</i></h2>
 <h2><i>want to make fresh modern compositional choices"</i></h2>
 <div class="space-large"></div>
-<div class="space-medium"></div>
-<p><i>The colours unlock the use of any chord in a key</p>
-<p>And 100's of unique key changes</p>
 <p><b>The Cook Book</b> is where we explore writing ideas with metaharmony</p>
 <p>Here's an example from 'exploring the subdominants':</i></p>
 <div class="space-medium"></div>
@@ -40,6 +37,9 @@
       <source src="audioCB/Bmaj.mp3" type="audio/mpeg">
   </audio>
 </div>
+<p><i>C^7 F^7 C^7 F^7</i></p>
+<p><i>Badd11 F^7 Badd11 F^7</i></p>
+<p><i>C^7 F^7 Cmaj</i></p>
 <div class="space-large"></div>
 <a href="cookbook/InAction.html" class="nav-style" ><i>Click here for Cook Book</i></a>
 <div class="space-large"></div>
