--- a/mystory.html
+++ b/mystory.html
@@ -27,8 +27,8 @@
     <img src="images/chp1.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>After finishing the harmony modules of my music degree</p>
-    <p>I discovered the work of Barry Harris and I developed this sense that all harmony was physically connected</p>
-    <p>And by playing different harmonic movements and changing keys we were traversing a unified landscape</p>
+    <p>I discovered the work of Barry Harris and I developed this sense that all harmony was connected</p>
+    <p>And by playing different harmonic movements and changing keys we are traversing a physical landscape</p>
     <br>
     <p><i>“What does this landscape look like?”</i></p>
     <br>
@@ -40,30 +40,30 @@
     <img src="images/chp2.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>During these 20 months I became unwell and took roughly a year to recover my health.</p>
-    <p>With the help of my friend Charlie, we coined the term metaharmony</p>
-    <p>And worked together to tidy up all the metaharmony ideas</p>
+    <p>With the help of my friend Charlie, we organised my ideas</p>
+    <p>and coined the term metaharmony</p>
     <div class="space-large"></div>
     <h1>Chapter 3: Development</h1>
     <img src="images/chp3.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
-    <p><i>What am I going to do with this? I need to share it with the world."</i> I thought.</p>
+    <p><i>What am I going to do with this? I need to share it with the world."</i></p>
     <br>
     <p>I started a YouTube channel</p>
-    <p>This was a wonderfully productive time of learning how to produce content,</p>
-    <p>explore and  communicate metaharmony</p>
+    <p>This was a productive time of learning how to produce content,</p>
+    <p>explore and communicate metaharmony</p>
     <p>Metaharmony is not just an idea, but a tool to be used</p>
     <p>and in this season I grew in how to harness its creative potential.</p>
     <div class="space-large"></div>
     <h1>Chapter 4: Yielding</h1>
     <img src="images/chp4.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
-    <p>This is a delicate moment, let me try and explain...</p>
+    <p>This is a delicate and personal moment, let me try and explain...</p>
     <div class="space-medium"></div>
     <p>During this time of YouTube development, I had become rather obsessed with the idea of ‘succeeding’</p>
     <p>making meta harmony into an online business and conquering the world with it</p>
     <br>
     <p>But in April 2023, I picked up a leaflet that had the Lord’s prayer on it</p>
-    <p>and it stired my emotion.</p>
+    <p>and it stired my spirit.</p>
     <br>
     <p>I thought,</p>
     <p><i>“What if God is listening, and I pray this prayer and He actually responds</i></p>
@@ -83,17 +83,17 @@
     <p>all my back up files wiped</p>
     <p>and my laptop was in a binbag with a pint of water. </p>
     <br>
-    <h3>A friend of mine calls this “The Laptism”</h3>
+    <h3>My friend Meg calls this “The Laptism”</h3>
     <p>(laptop baptism…)</p>
     <br>
     <p>After this complete surrender I felt inner healing like I never knew was possible</p>
-    <p>hard compacted pain and pride melting into joy and peace.</p>
+    <p>hard compacted pain and pride melted into joy and peace.</p>
     <br>
     <p>The next day I received a vision of a tiny plant sprouting out of the ashes</p>
     <p>I knew meta harmony would rise again</p>
     <br>
     <p>The next 18 months were a time of rest and spiritual growth</p>
-    <p>I joined a church where I met a friend who I told my story to and he said,</p>
+    <p>I joined a church where I met my friend Sam who I told my story to and he said,</p>
     <br>
     <p><i>“I’ve got a laptop in my cupboard and I haven’t sold it</i></p>
     <p><i>because I sensed that God wanted me to give it to someone</i></p>
@@ -103,11 +103,11 @@
     <img src="images/chp5.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>So here we are at the beginning of 2025</p>
-    <p>and I am using said Laptop to rebuild metaharmony and create this website</p>
+    <p>and I am using said Laptop to create this website</p>
     <p>It seems the little metaharmony plant is growing.</p>
     <br>
     <p>It’s an absolute joy to continue working on metaharmony,</p>
-    <p>but nothing it can offer me compares to the promise of Jesus: </p>
+    <p>but nothing it can offer compares to the promise of Jesus: </p>
     <p>Eternal life with him</p>
     <br>
     <h3><i>“Whoever drinks of the water that I will give him will never be thirsty again.</i></h3>
@@ -128,7 +128,7 @@
     <br>
     <h3>But as for meta harmony,</h3>
     <p>I believe it has potential to be a fruitful tool for the right type of musician,</p>
-    <p>So do stay tuned if you find yourself interested</p>
+    <p>So do stay tuned if you're interested</p>
     <br>
     <p>Many thanks,</p>
     <p>Tom</p>
