--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -20,13 +20,21 @@
         <p>Welcome to complimentary colours, the beginning of our journey with melody and chord extensions</p>
         <h3>It's all about tension and resolution</h3>
         <p>Learning outcome: <i>Blue resolves to orange (also red to green and yellow to purple)</i></p>
+        <div class="space-large"></div>
         <p>The phrase 'complimentary colours' comes from the art world and refers to colours that are opporsite on the wheel</p>
         <img src="../images/cmp.png" class="standard-image" alt="Colour Wheel"><br>
         <p>They have the highest visual contrast to each other</p>
         <p>Imagine a green jumper with a red design on it, the red will really pop out!</p>
-        <p>But if the design is blue, the colours will blend together</p>
+        <p>But if the design is blue, it will blend with the green jumper</p>
         <p>This is because of their closeness/distance on the colour wheel</p>
-        <h3>but how does this relate to harmony?</h3>
+        <div class="space-large"></div>
+        <p>but how does this relate to harmony?</p>
+        <div class="space-large"></div>
+        <p>Essentially,</p>
+        <h2>Blue notes pop against orange chords</h2>
+        <p>This manafests in chord movement, melody and chord extensions</p>
+        <p>Let's unpack:</p>
+        <div class="space-large"></div>
         <p>It all starts with a special scale I learned from the late Barry Harris</p>
         <p>Let's start with the C major scale, if we add the extra note of Ab we get something cool</p>
         <img src="../images/cmajorplusab.png" class="standard-image" alt="Colour Wheel"><br>
@@ -44,6 +52,7 @@
                 <source src="../audio/ddim.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>The other 4 notes are orange, a C6 chord (we'll discuss this in a later page)</p>
         <img src="../images/cmajor6.png" class="standard-image" alt="Colour Wheel"><br>
         <div class="audio-player-container">
@@ -52,10 +61,12 @@
                 <source src="../audio/c6.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>Here's all 4 orange notes and all 4 blue notes</p>
         <img src="../images/fullbarry.png" class="standard-image" alt="Colour Wheel"><br>
         <p>Let's veiw the scale like this to see the alternating nature of the colours:</p>
         <img src="../images/blobs.png" class="small-image" alt="Colour Wheel"><br>
+        <div class="space-large"></div>
         <h3>Now,</h3>
         <p>These orange and blue notes do something really cool:</p>
         <p>We get an alternating system of tension and resolution</p>
@@ -68,6 +79,7 @@
             </audio>
         </div>
         <h3>Can you hear the blue notes pulling up to the orange notes?</h3>
+        <div class="space-large"></div>
         <p>Explore playing this for yourself</p>
         <p>We get the same effect if we descend the scale, can you hear the tense blue notes resolving down to the orange notes?</p>
         <img src="../images/scaledown.gif" class="small-image" alt="Colour Wheel"><br>
@@ -77,6 +89,7 @@
                 <source src="../audio/barrydsc.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>This gives a way of thinking about melodic tension and resolution</p>
         <h3>Experiement for yourself and feel how each blue note resolves up and down in the scale</h3>
         <p>We can also play this as chords, the blue <i>chord</i> can resolve either up or down into the orange chord of C major 6</p>
@@ -89,10 +102,12 @@
         </div>
         <p>In this example, we start on Dº7, resolve down to C6, then we go down to Bº7, resolving back up to C6</p>
         <p>This demonstrates how the blue chord can sit above or below C major resolveing to it</p>
+        <div class="space-large"></div>
         <h2>Complimentary colours is all about the tension of blue pulling back to orange</h2>
         <p>I would encourage you to take a break here and process what we've discussed</p>
         <p>We've covered complementary colours as melodic movement and chord movement</p>
         <p>Here's the 3rd point for this page:</p>
+        <div class="space-large"></div>
         <h3>We can also use complimentary colours to understand chord extensions</h3>
         <p>for example we think of the C major 7 (C^7) as a resolved orange triad with a tense blue note</p>
         <img src="../images/cmaj7.gif" class="standard-image" alt="Colour Wheel"><br>
@@ -104,6 +119,7 @@
                 <source src="../audio/Cmaj7.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>In metaharmony we would write this chord like this:</p>
         <img src="../images/Cmaj7symb.png" class="small-image" alt="Colour Wheel"><br>
         <p>An orange C major triad with a blue ^7th added to it</p>
@@ -118,6 +134,7 @@
                 <source src="../audio/4majext.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>We get the same extensions on C minor:</p>
         <div class="audio-player-container">
             <div class="audio-title">Cm^7, Cmadd9, Cmadd11, Cmaddb13</div>
@@ -128,29 +145,35 @@
         <p>This gives us 4 of the 9 possible extensions you can add to a major or minor triad</p>
         <p>What about b7ths for example?</p>
         <p>We'll discuss such things in the advanced colour section of the website</p>
+        <div class="space-large"></div>
         <h2>But for now we've learned that</h2>
         <p>complimentary colours provide:</p>
         <h3>- Melodic tension and resolution (Barry's scale)</h3>
         <h3>- Harmonic (chordal) tension and resolution (Dº7 to Cmaj)</h3>
         <h3>- And tense chord extensions (C^7)</h3>
         <p>All this is represented in this image below</p>
+        <div class="space-large"></div>
         <img src="../images/cmp.png" class="standard-image" alt="Colour Wheel"><br>
+        <div class="space-large"></div>
         <p>And all applies the same with purple/yellow and green/red</p>
         <div class="space-large"></div>
         <h1>Congratulations!</h1>
         <p>We've completed the 4 first steps of meta harmony</p>
+        <div class="space-large"></div>
         <p>We know:</p>
-        <p>- that primary colours represent the 12 notes</p>
-        <p>- that secondary colours represent the major and minor triads</p>
-        <p>- that secondary colours explain function in a broad way and allow key changes</p>
-        <p>- that complimentary colours give tension and resolution</p>
+        <p>1. that primary colours represent the 12 notes</p>
+        <p>2. that secondary colours represent the major and minor triads</p>
+        <p>3. that secondary colours explain function in a broad way and allow key changes</p>
+        <p>4. that complimentary colours give tension and resolution</p>
+        <div class="space-large"></div>
         <p>We've set our foundation</p>
+        <div class="space-large"></div>
         <h3>Where would you like to go next?</h3>
         <div class="space-large"></div>
             <a href="functions 2.html"class="nav-style">Back to Functions 2</a> |
             <a href="/colours/colours.html"class="nav-style">Advanced colour pages</a> | 
             <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
             <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
-            <div class="space-medium"></div>
+            <div class="space-large"></div>
         </body>
  </html>
