--- a/colours/functions.html
+++ b/colours/functions.html
@@ -22,10 +22,17 @@
         <h1>?</h1>
         <p>What do these 3 colours do for us?</p>
         <h3>They show functional relationship between chords</h3>
-        <p>I learned this from Erno Lendvai in his book 'Symmetries of Music' (He calls it axis theory)</p>
+        <div class="space-large"></div>
+        <img src="../images/purpsandgreens.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <h2><i>Essentially, we can use all purple and green chords in the key of C major</i></h2>
+        <div class="space-large"></div>
+        <p>We put this into action in the Cook Book, but here we're going to explain it</p>
+        <h2>So let's unpack:</h2>
+        <p>I learned this from Erno Lendvai in his book 'Symmetries of Music' (where he calls this idea axis theory)</p>
         <p>It's the power to understand and use any possible chord</p>
         <p>Learning outcome: <i>all purples are dominant to C, all greens are subdominant to C</i></p>
-        <p>Let's explain...</p>
+        <div class="space-large"></div>
         <H2>Ok,</H2>
         <p>We're in the key of C major</p>
         <p>We have chords I, IV and V built on the 1st, 4th and 5th degree of the C major scale:</p>
@@ -36,11 +43,14 @@
                 <source src="../audio/cfgc.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <h3>Each of these chords has a harmonic function</h3>
         <p>C is called the <b>Tonic</b> because it feels like home</p>
         <p>G is called the <b>Dominant</b>, it has tension which pulls back to the tonic</p>
         <p>F is called the <b>Subdominant</b>, it can either set up the dominant or resolve to C</p>
+        <div class="space-medium"></div>
         <img src="../images/tsd.png" class="small-image" alt="Colour Wheel">
+        <div class="space-large"></div>
         <p>Hear how the dominant pulls back to the tonic</p>
         <div class="audio-player-container">
             <div class="audio-title">Cmaj Gmaj Cmaj</div>
@@ -49,6 +59,7 @@
             </audio>
         </div>
         <p>Can you hear how C is resolved and G feels unnresolved, pulling us back to C?</p>
+        <div class="space-large"></div>
         <p>What about the subdominant?</p>
         <p>It can either set up the dominant as in the first audio example of this page</p>
         <p>or it can resolve to the tonic in its own way like this</p>
@@ -59,21 +70,28 @@
             </audio>
         </div>
         <p>this movement of IV to I is often called a plagal cadence</p>
+        <div class="space-large"></div>
         <p>So these are the 3 functions: Tonic, Subdominant and Dominant</p>
-        <h2><i>BUT HAVE YOU NOTICED SOMETHING?</i></h2>
-        <p>Our 3 harmonic functions map to the 3 secondary colours:</p>
+        <div class="space-large"></div>
+        <h2><i>But have you noticed something?</i></h2>
+        <p><i>Our 3 harmonic functions map to the 3 secondary colours:</i></p>
+        <div class="space-large"></div>
         <img src="../images/wheelfunctions.png" class="large-image" alt="Colour Wheel">
+        <div class="space-large"></div>
         <p>And heres the punchline of this entire page:</p>
         <h2><u>Chords of the same colour have the same function</u></h2>
         <p>This applies to all possible chords</p>
         <p>Of course there's much detail and nuance within this</p>
         <p>But essentially we can say:</p>
         <h3><i>"If we're in the key of C, all purple chords are dominant"</i></h3>
-        <p>So here are all the purple major chords resolving to C:</p>
+        <div class="space-large"></div>
+        <p>We'll be having fun with this over at the Cook Book</p>
+        <p>But we're on this page to understand it:</p>
+        <p>Here are all the purple major chords resolving to C:</p>
         <img src="../images/allpurpleswithnames.png" class="standard-image" alt="Colour Wheel">
         <p>Not only can we see our regular dominant Gmaj above Cmaj</p>
         <p>But we also find traditional dominant substitutions here</p>
-        <p>You'll notice the tritone sub (Db), which could sound like this:</p>
+        <p>You'll notice the tritone sub (Db), which traditionally sounds like this:</p>
         <div class="audio-player-container">
             <div class="audio-title">Dm9 Db9 C69</div>
             <audio controls>
@@ -82,6 +100,7 @@
         </div>
         <p>We did a 251 into C (Dm G C) but substituted the 5 for the purple Dbmaj</p>
         <p>The progressions been jazzed up with extra notes but the underlying chord movement and functions remain</p>
+        <div class="space-large"></div>
         <h3>Next up is the backdoor dominant (Bb)</h3>
         <p>Which could sound like this:</p>
         <div class="audio-player-container">
@@ -91,7 +110,8 @@
             </audio>
         </div>
         <p>Once again we're playing in a jazz context, but the movement of Bb to C as a dominant cadence is strong</p>
-        <p>In the cook book section of the website we'll explore many applications of metaharmony and go outside of the traditional jazz sound</p>
+        <p>In the Cook Book page 'exploring the dominants' we explore and get different sounds out of this</p>
+        <div class="space-large"></div>
         <h3>Ok, What about E major?</h3>
         <p>It's the last of the purple major chords</p>
         <p>Traditionaly E major resolves to the relative minor of C: A minor</p>
@@ -102,17 +122,20 @@
                 <source src="../audio/ceam.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <h1>But here's where metaharmony starts getting cool</h1>
         <p>We can use the colours to make chord movements that aren't traditional</p>
         <p>We can resolve Emaj to Cmaj, simply because its purple to orange</p>
-        <p>This isn't a traditional thing, but it sounds beautiful:</p>
+        <p>This isn't a traditional cadence, but it sounds beautiful:</p>
         <div class="audio-player-container">
             <div class="audio-title">Dm E C</div>
             <audio controls>
                 <source src="../audio/dmec.mp3" type="audio/mpeg">
             </audio>
         </div>
+        <div class="space-large"></div>
         <p>Ok, so we've resolved all 4 purple majors into the key of C</p>
+        <div class="space-large"></div>
         <h2>Let's go another layer deeper into metaharmony</h2>
         <p>We can use the purple minor chords as dominant to Cmaj</p>
         <img src="../images/minordominants.png" class="standard-image" alt="Colour Wheel">
@@ -123,8 +146,11 @@
                 <source src="../audio/cgmc.mp3" type="audio/mpeg">
             </audio>
         </div>
-        <p>We'll do more practical explorations of meta harmony in the cook book part of the website</p>
-        <p>Achieving different flavours/vibes out of these different colour choices</p>
+        <p>Check out the Cook Book: Exploring the Dominants for more contemporary explorations of this</p>
+        <p>including how to get chords like Bb minor to flow well in C major</p>
+        <div class="space-medium"></div>
+        <a href="../cookbook/Exploringdominants/Exploringdominants.html"class="nav-style">Exploring the Dominants</a>
+        <div class="space-large"></div>
         <p>But to conclude what we've just covered:</p>
         <h2><i>"All purple chords are dominant to C"</i></h2>
         <p>Great,</p>
@@ -135,7 +161,8 @@
         <p>or resolve to C as their own cadence:</p>
         <img src="../images/allsubdominants.png" class="standard-image" alt="Colour Wheel">
         <p>They can move in other ways too</p>
-        <p>Here's an example from the cook book page "Exploring the subdominants part 1"</p>
+        <p>Here's an example from the cook book page 'Exploring the subdominants part 1'</p>
+        <div class="space-medium"></div>
         <div class="audio-player-container">
             <div class="audio-title">Using Dmaj in C</div>
             <audio controls>
@@ -147,14 +174,18 @@
         <p>Dadd9, F^7, Dadd9, F^7,</p>
         <p>C^7, F^7, Cmaj...</p>
         <div class="space-large"></div>
+        <a href="../cookbook/Exploringsubdominants/exploringsubdominants.html"class="nav-style">Exploring the Subdominants</a>
+        <div class="space-large"></div>
         <h2>Ok, thats a lot of information!</h2>
-        <p>Well done for working through</p>
         <h3>Conclusion:</h3>
         <p>We've learned that all purple chords are dominant to C major</p>
         <p>and all green chords are subdominant to C major</p>
-        <p>We can use any purple or green chord in the key of C in many ways</p>
-        <p>Here's all the purples and greens to C:</p>
+        <div class="space-medium"></div>
         <img src="../images/purpsandgreens.png" class="standard-image" alt="Colour Wheel">
+        <div class="space-large"></div>
+        <p>We explore all of these in the Cook Book:</p>
+        <div class="space-medium"></div>
+        <a href="../cookbook/InAction.html"class="nav-style">The Cook Book</a>
         <div class="space-large"></div>
         <h1>But what about all the other orange chords?</h1>
         <h3>and what if your song is in a completely different key?</h3>
@@ -162,6 +193,6 @@
         <div class="space-large"></div>
             <a href="secondaries.html"class="nav-style">Back to Secondries</a> |
             <a href="functions 2.html"class="nav-style">Harmonic Functions Part 2</a>
-            <div class="space-medium"></div>
+            <div class="space-large"></div>
         </body>
  </html>
